--- a/SurfVpnClientTest1/SurfVpnClientTest1.csproj
+++ b/SurfVpnClientTest1/SurfVpnClientTest1.csproj
@@ -16,4 +16,10 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="icon.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
