--- a/SurfVpnClientTest1/SurfVpnClientTest1.csproj
+++ b/SurfVpnClientTest1/SurfVpnClientTest1.csproj
@@ -10,6 +10,7 @@
     <PublishSingleFile>true</PublishSingleFile>
     <RuntimeIdentifier>win-x64</RuntimeIdentifier>
 	<PublishReadyToRun>true</PublishReadyToRun>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
