--- a/SurfVpnClientTest1/SurfVpnClientTest1.csproj
+++ b/SurfVpnClientTest1/SurfVpnClientTest1.csproj
@@ -11,6 +11,7 @@
     <RuntimeIdentifier>win-x64</RuntimeIdentifier>
 	<PublishReadyToRun>true</PublishReadyToRun>
     <ApplicationIcon>icon.ico</ApplicationIcon>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <ItemGroup>
