--- a/SurfVpnClientTest1/SurfVpnClientTest1.csproj
+++ b/SurfVpnClientTest1/SurfVpnClientTest1.csproj
@@ -9,7 +9,7 @@
     <SelfContained>true</SelfContained>
     <PublishSingleFile>true</PublishSingleFile>
     <RuntimeIdentifier>win-x64</RuntimeIdentifier>
-	<PublishReadyToRun>true</PublishReadyToRun>
+	<PublishReadyToRun>false</PublishReadyToRun>
     <ApplicationIcon>icon.ico</ApplicationIcon>
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
