--- a/SurfVpnClientTest1/SurfVpnClientTest1.csproj
+++ b/SurfVpnClientTest1/SurfVpnClientTest1.csproj
@@ -15,13 +15,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
+    <None Remove="icon.ico" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="icon.ico">
+    <Content Include="icon.ico">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
   </ItemGroup>
 
 </Project>
